<resources>
    <string name="app_name">Ludo </string>
    <string name="ludo_game">Ludo Game</string>
    <string name="play">Play</string>
    <string name="ic_logo">Logo</string>
    <string name="login">Log in</string>
    <string name="login_desc">Please Enter your Phone Number and we will send the OTP to Your Phone</string>
    <string name="hint_phoneNumber">Phone Number</string>
    <string name="send">Send</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_desc">Please type the verification code sent to Mobile number</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="image">image</string>
    <string name="dummy_no">7805095064</string>
    <string name="i_agree_to_terms_conditions"><![CDATA[I agree to Terms & Conditions]]></string>
    <string name="enter_mobile">Enter your mobile number</string>
    <string name="we_will_send_you_otp">We will send you OTP</string>
    <string name="back">back</string>
    <string name="login_verification">Login Verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="add_coins">Add coins</string>
    <string name="diamond_ic">Diamond ic</string>
    <string name="coins_ic">Coins ic</string>
    <string name="settings">Settings</string>
    <string name="leave">leave</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="add_friend_ic">Add Friend Icon</string>
    <string name="get_free_coins">Get free Coins!</string>
    <string name="moneybag">MoneyBag</string>
    <string name="computer">Computer</string>
    <string name="vs">VS</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="local">Local</string>
    <string name="invite_your_friends">Invite your Friends!</string>
    <string name="player_configuration">Player Configuration</string>
    <string name="start_game">Start Game</string>
    <string name="check">check</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>
