<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Widget.Design.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_bold"
                android:text="@string/enter_mobile"
                android:textColor="#0C0E14"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/arima_regular"
                android:gravity="center_horizontal"
                android:text="@string/we_will_send_you_otp"
                android:textColor="@color/grey"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/edt_bg"
                android:fontFamily="@font/arima_bold"
                android:hint="@string/hint_phoneNumber"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <requestFocus />

        </LinearLayout>

        <CheckBox
            android:id="@+id/txt_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:fontFamily="@font/arima_regular"
            android:text="@string/i_agree_to_terms_conditions"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/sendOtp_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/gradient_bg"
            android:fontFamily="@font/arima_regular"
            android:gravity="center"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>